# Finanace-Tracker

./: README.md  pyproject.toml
finace_tracker/: data.py  main.py
