[tool.poetry]
name = "finace-tracker"
version = "0.1.0"
description = ""
authors = ["SYED AHMAD MUJTABA <amujtaba527@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
